--- a/MyWpfFramework.Infrastructure/App.xaml
+++ b/MyWpfFramework.Infrastructure/App.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
-  <Application.Resources>
-    <!--<vm:ViewModelLocator d3p1:Key="Locator" d:IsDataSource="True" xmlns:d3p1="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:vm="clr-namespace:MyWpfFramework.Infrastructure.ViewModel" />-->    
-  </Application.Resources>
+    <Application.Resources>
+        <!--اگر سطر ذيل توسط ام وي وي ام لايت اضافه شده بود حذفش كنيد-->
+        <!--<vm:ViewModelLocator d3p1:Key="Locator" d:IsDataSource="True" xmlns:d3p1="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:vm="clr-namespace:MyWpfFramework.Infrastructure.ViewModel" />-->
+    </Application.Resources>
 </Application>
