--- a/MyWpfFramework/Views/Common/About.xaml
+++ b/MyWpfFramework/Views/Common/About.xaml
@@ -5,6 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       mc:Ignorable="d" FlowDirection="RightToLeft"
       d:DesignHeight="300" d:DesignWidth="600"  Language="fa-IR"
+      KeepAlive="True"
       Title="About">
     <StackPanel Margin="5" x:Name="panelContent" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <GroupBox Height="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
